--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Broccoli &amp; Co. | A Bushel of Fun</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -34,7 +36,7 @@
         <div class="row">
           <div class="disclaimer col-xs-12">
             <p>Made with <i class="glyphicon glyphicon-heart" aria-hidden="true"></i> in Melbourne
-            <br/>&copy; <span class="copyright-date">2016</span> Broccoli Co. All rights reserved.</p>
+            <br/>&copy; <span class="copyright-date">2016</span> Broccoli &amp; Co. All rights reserved.</p>
           </div>
         </div>
       </div>
